--- a/sections/product-template-mandala-blue-new.liquid
+++ b/sections/product-template-mandala-blue-new.liquid
@@ -1172,7 +1172,7 @@
             <div class="mandala__universe">
               <div class="mandala__universe-block">
                 <p>{{ section.settings.mandala_title }}</p>
-                <img src="{{ 'mandala-universe-icon.png' | asset_url }}" alt="">
+                <img src="{{ section.settings.mandala_icon | img_url: 'master' }}" alt="">
               </div>
             </div>
 
@@ -1182,7 +1182,7 @@
                 <p>{{ section.settings.mandala_set_text }}</p>
               </div>
               <div class="mandala__set-bg">
-                <img src="{{ 'mandala-set-icon.png' | asset_url }}" alt="">
+                <img src="{{ section.settings.mandala_set_icon | img_url: 'master' }}" alt="">
               </div>
             </div>
 
@@ -1428,6 +1428,11 @@
             "label": "Mandala title"
           },
           {
+            "type": "image_picker",
+            "id": "mandala_icon",
+            "label": "Mandala banner icon"
+          },
+          {
             "type": "header",
             "content": "Mandala Set"
           },
@@ -1435,6 +1440,11 @@
             "type": "image_picker",
             "id": "mandala_set_bg",
             "label": "Mandala Set background"
+          },
+          {
+            "type": "image_picker",
+            "id": "mandala_set_icon",
+            "label": "Mandala Set Icon"
           },
           {
             "type": "text",
@@ -1696,7 +1706,7 @@
             "type": "checkbox",
             "id": "enable_combo_upsell",
             "label": "Enable COMBO Upsell Block",
-            "default": true
+            "default": false
           },
           {
             "type": "product",
