--- a/sections/product-template-mandala-new-1.liquid
+++ b/sections/product-template-mandala-new-1.liquid
@@ -840,7 +840,7 @@
           align-items: center;
           justify-content: center;
           font-weight: bold;
-          font-size: 24px;
+          font-size: {{section.settings.mandala_title_fontsize}};
           line-height: 29px;
           color: #000;
           padding: 10px;
@@ -1070,7 +1070,7 @@
             margin-bottom: 50px;
           }
           .mandala__universe-block {
-            font-size: 18px;
+            font-size: {{section.settings.mandala_title_fontsize_mob}};
             line-height: 21px;
             position: absolute;
             max-width: inherit;
@@ -1426,6 +1426,18 @@
               "type": "text",
               "id": "mandala_title",
               "label": "Mandala title"
+            },
+            {
+              "type": "text",
+              "id": "mandala_title_fontsize",
+              "label": "Mandala title Font Size",
+              "default": "24px"
+            },
+            {
+              "type": "text",
+              "id": "mandala_title_fontsize_mob",
+              "label": "Mandala title Font Size on Mobile",
+              "default": "18px"
             },
             {
               "type": "image_picker",
