--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -238,6 +238,25 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
 </script>
 <!-- End Tiktok Pixel Code -->
 
+  <!-- DV 13/12/21 Pinterest Pixel Code -->
+  <script type="text/javascript">
+!function(e){if(!window.pintrk){window.pintrk=function()
+{window.pintrk.queue.push(Array.prototype.slice.call(arguments))};var
+n=window.pintrk;n.queue=[],n.version="3.0";var
+t=document.createElement("script");t.async=!0,t.src=e;var
+r=document.getElementsByTagName("script")[0];r.parentNode.insertBefore(t,r)}}
+("https://s.pinimg.com/ct/core.js"); 
+
+pintrk('load','2613162492202', { em: '{{ customer.email }}', });
+pintrk('page');
+</script> 
+<noscript> 
+<img height="1" width="1" style="display:none;" alt=""
+src="https://ct.pinterest.com/v3/?tid=2613162492202&noscript=1" /> 
+</noscript>
+  <!-- End Pinterest Pixel Code -->
+
+  
 <!-- DV 29/03/21 Outbrain Pixel Code -->
 <script data-obct type = "text/javascript">
   /** DO NOT MODIFY THIS CODE**/
