--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -860,10 +860,25 @@
               </div>
             </div>
 
-            <div class="banner-inspirational-gift">
+            <div class="banner-inspirational-gift testA">
               <div class="banner-inspirational-gift_header">Inspirational Gift</div>
               <div class="banner-inspirational-gift_text">Bring more happiness into the life of your loved ones by choosing a gift that is unforgettable experience.</div>
               <div class="banner-inspirational-gift_link"><a href="/products/giftcard" class="banner-inspirational-gift_a">{{ 'custome_text.banner.buy_gift_card' | t }} -></a></div>
+            </div>
+            <style>
+            .test-new {display: none;}
+            @media only screen and (min-width: 749px) {
+               .test-new .banner-inspirational-gift_header, .test-new .banner-inspirational-gift_link, .test-new .banner-inspirational-gift_text {
+                  padding-left: 145px;
+                  padding-right: 15px;
+                }
+                }
+            </style>
+            <div class="banner-inspirational-gift test-new">
+              <div class="banner-inspirational-gift_header">Send a gift to a friend!<br /> It is so easy!</div>
+              <div class="banner-inspirational-gift_text"> Share a piece of your heart to your loved ones, wherever they are. Make them happy with an unforgettable gift for any occasion.<br />
+                Take just a few sipmle steps!</div>
+              <div class="banner-inspirational-gift_link"><a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=product_page_banner&utm_medium=gift_banner&utm_content=gift" class="banner-inspirational-gift_a"> Send a Gift</a></div>
             </div>
             <div class="advantage">
               <div class="advantage-item">
