--- a/sections/collection-animals-template.liquid
+++ b/sections/collection-animals-template.liquid
@@ -269,7 +269,7 @@
   
         {%- if forloop.index == 8 -%}
         <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }} {{grid_mobile}}">
-          <style>
+          {%comment%}<style>
           .quiz-item {
             height: 335px;
             position: relative;
@@ -324,8 +324,8 @@
                   <a id="quiz-ref" href="#quiz-BZHY5Y">Start Quiz</a>
                 </div>
               </div>
-            </div>
-          </div>
+            </div>{%endcomment%}
+        </div>
         {%- endif -%}
       
         <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }} {{grid_mobile}}">
