--- a/sections/collection-nature-template.liquid
+++ b/sections/collection-nature-template.liquid
@@ -259,7 +259,7 @@
   
         {%- if forloop.index == 8 -%}
         <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }} {{grid_mobile}}">
-          <style>
+          {% comment %}<style>
           .quiz-item {
             height: 335px;
             position: relative;
@@ -314,7 +314,45 @@
                   <a id="quiz-ref" href="#quiz-BZHY5Y">Start Quiz</a>
                 </div>
               </div>
-            </div>
+            </div>{% endcomment %}
+            <style>
+              .banner-send_gift {
+                margin-bottom: 30px;
+                position: relative;
+              }
+              .banner-send_gift .button {
+                font-size: 13px;
+                color: rgb(255, 255, 255);
+                font-weight: bold;
+                text-transform: uppercase;
+                line-height: 5.231;
+                background-color: rgb(255, 142, 0);
+                width: 219px;
+                height: 54px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                position: absolute;
+                bottom: 6%;
+                left: 10%;
+              }
+              @media (max-width: 767px) {
+                .banner-send_gift .button {
+                  font-size: 10px;
+                  width: 100px;
+                  height: auto;
+                  line-height: inherit;
+                  padding: 2px;
+                  bottom: 5%;
+                  border-radius: 50px;
+                }
+              } 
+            </style>
+              <div class="banner-send_gift">
+                <img src="{{ '211210gift_3.png' | asset_url }}">
+                <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=category_page_banner&utm_medium=gift_banner&utm_campaign=gift" class="button">Send a Gift</a>
+              </div>
           </div>
         {%- endif -%}
       
