AB test Send A Gift Banner | Collection page

--- a/sections/collection-nature-template.liquid
+++ b/sections/collection-nature-template.liquid
@@ -317,6 +317,7 @@
             </div>{% endcomment %}
             <style>
               .banner-send_gift {
+                display: none;
                 margin-bottom: 30px;
                 position: relative;
               }
@@ -327,31 +328,36 @@
                 text-transform: uppercase;
                 line-height: 5.231;
                 background-color: rgb(255, 142, 0);
-                width: 219px;
-                height: 54px;
+                max-width: 219px;
+                width: 80%;
+                height: 34px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 cursor: pointer;
-                position: absolute;
-                bottom: 6%;
-                left: 10%;
+                position: absolute; 
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
               }
               @media (max-width: 767px) {
                 .banner-send_gift .button {
                   font-size: 10px;
-                  width: 100px;
                   height: auto;
                   line-height: inherit;
-                  padding: 2px;
-                  bottom: 5%;
+                  padding: 6px;
                   border-radius: 50px;
                 }
               } 
+              @media (max-width: 425px) {
+                .banner-send_gift .button {
+                  padding: 0px;
+                }
+              }
             </style>
               <div class="banner-send_gift">
                 <img src="{{ '211210gift_3.png' | asset_url }}">
-                <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=category_page_banner&utm_medium=gift_banner&utm_campaign=gift" class="button">Send a Gift</a>
+                <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=collections_banner&utm_medium=gift_banner&utm_campaign=gift" class="button">Send a Gift</a>
               </div>
           </div>
         {%- endif -%}
