--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -309,41 +309,47 @@
           </div>{% endcomment %}
           <style>
             .banner-send_gift {
+              display: none;
               margin-bottom: 30px;
               position: relative;
             }
             .banner-send_gift .button {
-              font-size: 13px;
-              color: rgb(255, 255, 255);
-              font-weight: bold;
-              text-transform: uppercase;
-              line-height: 5.231;
-              background-color: rgb(255, 142, 0);
-              width: 219px;
-              height: 54px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              cursor: pointer;
-              position: absolute;
-              bottom: 6%;
-              left: 10%;
-            }
-            @media (max-width: 767px) {
-              .banner-send_gift .button {
-                font-size: 10px;
-                width: 100px;
-                height: auto;
-                line-height: inherit;
-                padding: 2px;
-                bottom: 5%;
-                border-radius: 50px;
+                font-size: 13px;
+                color: rgb(255, 255, 255);
+                font-weight: bold;
+                text-transform: uppercase;
+                line-height: 5.231;
+                background-color: rgb(255, 142, 0);
+                max-width: 219px;
+                width: 80%;
+                height: 34px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                position: absolute; 
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
               }
-            } 
+              @media (max-width: 767px) {
+                .banner-send_gift .button {
+                  font-size: 10px;
+                  height: auto;
+                  line-height: inherit;
+                  padding: 6px;
+                  border-radius: 50px;
+                }
+              } 
+              @media (max-width: 425px) {
+                .banner-send_gift .button {
+                  padding: 0px;
+                }
+              }
           </style>
             <div class="banner-send_gift">
               <img src="{{ '211210gift_3.png' | asset_url }}">
-              <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=category_page_banner&utm_medium=gift_banner&utm_campaign=gift" class="button">Send a Gift</a>
+              <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=collections_banner&utm_medium=gift_banner&utm_campaign=gift" class="button">Send a Gift</a>
             </div>
         </div>
       {%- endif -%}
