--- a/sections/collection-animals-template.liquid
+++ b/sections/collection-animals-template.liquid
@@ -268,7 +268,7 @@
         {% for product in collection.products %}
   
         {%- if forloop.index == 8 -%}
-          <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }} {{grid_mobile}}">
+          <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }} {{grid_mobile}} banner-div-send_gift">
           {% comment %}<style>
           .quiz-item {
             height: 335px;
@@ -327,7 +327,6 @@
             </div>{% endcomment %}
             <style>
               .banner-send_gift {
-                display: none;
                 margin-bottom: 30px;
                 position: relative;
               }
