--- a/sections/collection-nature-template.liquid
+++ b/sections/collection-nature-template.liquid
@@ -258,7 +258,7 @@
         {% for product in collection.products %}
   
         {%- if forloop.index == 8 -%}
-        <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }} {{grid_mobile}}">
+        <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }} {{grid_mobile}} banner-div-send_gift">
           {% comment %}<style>
           .quiz-item {
             height: 335px;
@@ -317,7 +317,6 @@
             </div>{% endcomment %}
             <style>
               .banner-send_gift {
-                display: none;
                 margin-bottom: 30px;
                 position: relative;
               }
