AB test Send A Gift Banner | List Collection page

--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -316,7 +316,7 @@
               text-transform: uppercase;
               line-height: 5.231;
               background-color: rgb(255, 142, 0);
-              width: 219px;
+              width: 25%;
               height: 54px;
               display: flex;
               align-items: center;
