AB test Send A Gift Banner | List Collection page

--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -328,11 +328,11 @@
             }
             @media (max-width: 767px) {
               .banner-send_gift .button {
-                font-size: 10px;
-                width: 100px;
+                font-size: 14px;
+                width: 120px;
                 height: auto;
                 line-height: inherit;
-                padding: 2px;
+                padding: 2px 10px;
                 bottom: 5%;
                 border-radius: 50px;
               }
