--- a/sections/product-giftcart-template.liquid
+++ b/sections/product-giftcart-template.liquid
@@ -515,7 +515,7 @@
       <div class="banner-inspirational-gift_header">Send a gift to a friend!<br /> It is so easy!</div>
       <div class="banner-inspirational-gift_text"> Share a piece of your heart to your loved ones, wherever they are. Make them happy with an unforgettable gift for any occasion.<br />
         Take just a few sipmle steps!</div>
-      <div class="banner-inspirational-gift_link"><a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=product_page_banner&utm_medium=gift_banner&utm_content=gift" class="banner-inspirational-gift_a"> Send a Gift</a></div>
+      <div class="banner-inspirational-gift_link"><a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=product_banner&utm_medium=gift_banner&utm_campaign=gift" class="banner-inspirational-gift_a"> Send a Gift</a></div>
     </div>
   <div class="product__steps">
     <div class="product__step">
