Эксперимент Send A Gift Banner Collection page/Collection list page

--- a/sections/list-collections-new-template.liquid
+++ b/sections/list-collections-new-template.liquid
@@ -354,11 +354,11 @@
             <div class="banner-send_gift">
               <div class="desktop">
                 <img src="{{ '211210gift_2.png' | asset_url }}">
-                <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=category_page_banner&utm_medium=gift_banner&utm_campaign=gift" class="button">Send a Gift</a>
+                <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=category_page_banner&utm_medium=gift_banner&utm_campaign=gift" class="button gift-collection-list">Send a Gift</a>
               </div>
               <div class="mobile">
                 <img src="{{ '211210gift_3.png' | asset_url }}">
-                <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=collections_banner&utm_medium=gift_banner&utm_campaign=gift" class="button">Send a Gift</a>
+                <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=collections_banner&utm_medium=gift_banner&utm_campaign=gift" class="button gift-collection-list">Send a Gift</a>
               </div>
             </div>
           <div class="collections__items">
