Эксперимент Send A Gift Banner Collection page/Collection list page

--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -335,7 +335,7 @@
           </style>
             <div class="banner-send_gift">
               <img src="{{ '211210gift_3.png' | asset_url }}">
-              <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=collections_banner&utm_medium=gift_banner&utm_campaign=gift" class="button">Send a Gift</a>
+              <a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=collections_banner&utm_medium=gift_banner&utm_campaign=gift" class="button gift-collection-page">Send a Gift</a>
             </div>
         </div>
       {%- endif -%}
