UN-1158  Подправить текст на товаре на com/eu

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -879,7 +879,7 @@
               <div class="banner-inspirational-gift_header">Send a gift to a friend!<br /> It is so easy!</div>
               <div class="banner-inspirational-gift_text"> Share a piece of your heart to your loved ones, wherever they are. Make them happy with an unforgettable gift for any occasion.<br />
                 Take just a few sipmle steps!</div>
-              <div class="banner-inspirational-gift_link"><a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=product_banner&utm_medium=gift_banner&utm_campaign=gift" class="banner-inspirational-gift_a"> Send a Gift</a></div>
+              <div class="banner-inspirational-gift_link"><a href="https://unidragon.gogiftmagic.com/pages/giftlanding?section=firstpromo&banner=unidragon-amazing-gifts&utm_source=product_banner&utm_medium=gift_banner&utm_campaign=gift" class="banner-inspirational-gift_a gift-banner-link"> Send a Gift</a></div>
             </div>
             <div class="advantage">
               <div class="advantage-item">
