--- a/layout/theme.landing.liquid
+++ b/layout/theme.landing.liquid
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;600&amp;family=Poppins:wght@400;500;600&amp;display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/style.min.css?1639662049676" />
+    <link rel="stylesheet" href="{{ 'landing.style.min.css' | asset_url }}" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png" />
@@ -26,7 +26,7 @@
 
 <body class="page">
     {{content_for_layout}}
-    <script src="assets/js/app.min.js?1639662049679"></script>
+    <script src="{{ 'landing.app.min.js' | asset_url }}"></script>
 </body>
 
 </html>
