pages/landing implementation

--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -1,7 +1,7 @@
 <div class="page__wrapper">
     <header class="header page__header">
         <div class="header__container"><img class="header__logo" src="{{ 'landing-logo.png' | asset_url }}" srcset="{{ 'landing-logo@2x.png' | asset_url }} 2x" width="165" height="54" alt="Unidragon" />
-            <h1 class="header__title">Fascinating <br>wooden puzzles</h1><img class="header__visual-1" src="{{ 'landing-header-visual-1.png' | asset_url }}" srcset="{{ 'landing-header-visual-1.png' | asset_url }} 1x'  | asset_url }}, {{ 'landing-header-visual-1@2x.png 2x' | asset_url }}" width="286" height="355" alt="" /><img class="header__visual-2" src="{{ 'landing-header-visual-2.png' | asset_url }}" srcset="{{ 'landing-header-visual-2.png' | asset_url }} 1x, {{ 'landing-header-visual-2@2x.png' | asset_url }} 2x" width="266" height="348" alt="" /><img class="header__visual-3" src="{{ 'landing-header-visual-3.png' | asset_url }}" srcset="{{ 'landing-header-visual-3.png' | asset_url }} 1x, {{ 'landing-header-visual-3@2x.png' | asset_url }} 2x" width="297" height="195" alt="" /><img class="header__visual-4" src="{{ 'landing-header-visual-4.png' | asset_url }}" srcset="{{ 'landing-header-visual-4.png' | asset_url }} 1x, {{ 'landing-header-visual-4@2x.pngx' | asset_url }} 2x" width="101" height="124" alt="" />
+            <h1 class="header__title">Fascinating <br>wooden puzzles</h1><img class="header__visual-1" src="{{ 'landing-header-visual-1.png' | asset_url }}" srcset="{{ 'landing-header-visual-1.png' | asset_url }} 1x'  | asset_url }}, {{ 'landing-header-visual-1@2x.png 2x' | asset_url }}" width="286" height="355" alt="" /><img class="header__visual-2" src="{{ 'landing-header-visual-2.png' | asset_url }}" srcset="{{ 'landing-header-visual-2.png' | asset_url }} 1x, {{ 'landing-header-visual-2@2x.png' | asset_url }} 2x" width="266" height="348" alt="" /><img class="header__visual-3" src="{{ 'landing-header-visual-3.png' | asset_url }}" srcset="{{ 'landing-header-visual-3.png' | asset_url }} 1x, {{ 'landing-header-visual-3@2x.png' | asset_url }} 2x" width="297" height="195" alt="" /><img class="header__visual-4" src="{{ 'landing-header-visual-4.png' | asset_url }}" srcset="{{ 'landing-header-visual-4.png' | asset_url }} 1x, {{ 'landing-header-visual-4@2x.png' | asset_url }} 2x" width="101" height="124" alt="" />
         </div>
     </header>
     <main class="page__content">
@@ -133,17 +133,17 @@
                 </div>
                 <div class="collection__categories">
                     <div class="c-category collection__category">
-                        <figure class="c-category__figure"><a href="#"> <img src="{{ 'landing-category-1.jpg' | asset_url }}" srcset="{{ 'landing-category-1.jpg 1x, assets/img/categories/category-1@2x.jpg' | asset_url }} 2x" width="360" height="287" alt="" /></a>
+                        <figure class="c-category__figure"><a href="#"> <img src="{{ 'landing-category-1.jpg' | asset_url }}" srcset="{{ 'landing-category-1.jpg' | asset_url }} 1x, {{ 'landing-category-1@2x.jpg' | asset_url }} 2x" width="360" height="287" alt="" /></a>
                             <figcaption class="c-category__category">Quezzle</figcaption>
                         </figure><a class="button c-category__button" href="#" role="button">Go to collection</a>
                     </div>
                     <div class="c-category collection__category">
-                        <figure class="c-category__figure"><a href="#"> <img src="{{ 'landing-category-2.jpg' | asset_url }}" srcset="{{ 'landing-category-2.jpg 1x, assets/img/categories/category-2@2x.jpg' | asset_url }} 2x" width="360" height="287" alt="" /></a>
+                        <figure class="c-category__figure"><a href="#"> <img src="{{ 'landing-category-2.jpg' | asset_url }}" srcset="{{ 'landing-category-2.jpg' | asset_url }} 1x, {{ 'landing-category-2@2x.jpg' | asset_url }} 2x" width="360" height="287" alt="" /></a>
                             <figcaption class="c-category__category">Wooden jigsaw puzzles animals</figcaption>
                         </figure><a class="button c-category__button" href="#" role="button">Go to collection</a>
                     </div>
                     <div class="c-category collection__category">
-                        <figure class="c-category__figure"><a href="#"> <img src="{{ 'landing-category-3.jpg' | asset_url }}" srcset="{{ 'landing-category-3.jpg 1x, assets/img/categories/category-3@2x.jpg' | asset_url }} 2x" width="360" height="287" alt="" /></a>
+                        <figure class="c-category__figure"><a href="#"> <img src="{{ 'landing-category-3.jpg' | asset_url }}" srcset="{{ 'landing-category-3.jpg' | asset_url }} 1x, {{ 'landing-category-3@2x.jpg' | asset_url }} 2x" width="360" height="287" alt="" /></a>
                             <figcaption class="c-category__category">Mandala puzzles</figcaption>
                         </figure><a class="button c-category__button" href="#" role="button">Go to collection</a>
                     </div>
