pages/landing implementation

--- a/layout/theme.landing.liquid
+++ b/layout/theme.landing.liquid
@@ -12,14 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;600&amp;family=Poppins:wght@400;500;600&amp;display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="{{ 'landing.style.min.css' | asset_url }}" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png" />
-    <link rel="manifest" href="assets/img/favicons/site.webmanifest" />
-    <link rel="mask-icon" href="assets/img/favicons/safari-pinned-tab.svg" color="#ff7607" />
-    <link rel="shortcut icon" href="assets/img/favicons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ 'landing-apple-touch-icon.png' | asset_url }}" />
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ 'landing-favicon-32x32.png' | asset_url }}" />
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ 'landing-favicon-16x16.png' | asset_url }}" />
+    <link rel="manifest" href="{{ 'landing-site.webmanifest' | asset_url }}" />
+    <link rel="mask-icon" href="{{ 'landing-safari-pinned-tab.svg' | asset_url }}" color="#ff7607" />
+    <link rel="shortcut icon" href="{{ 'landing-favicon.ico' | asset_url }}" />
     <meta name="msapplication-TileColor" content="#1a1a1a" />
-    <meta name="msapplication-config" content="assets/img/favicons/browserconfig.xml" />
+    <meta name="msapplication-config" content="landing-browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
     {{content_for_header}}
 </head>
